Fix margin on mobile

--- a/wg21org.css
+++ b/wg21org.css
@@ -81,8 +81,7 @@ body {
 
 	/* Layout */
 	max-width: 50em;			  /* limit line length to 50em for readability   */
-    margin-left: 300px;
-	/* margin: 0 auto;				/\* center text within page                    *\/ */
+	margin: 0 auto;				/* center text within page                    */
 	padding: 1.6em 1.5em 2em 50px; /* assume 16px font size for downlevel clients */
 	padding: 1.6em 1.5em 2em calc(26px + 1.5em); /* leave space for status flag    */
 
